--- a/app/views/leaderboard/_leaderboard_table.html.erb
+++ b/app/views/leaderboard/_leaderboard_table.html.erb
@@ -1,14 +1,12 @@
 <table class="table table-hover" id="leaderboardTable">
   <thead>
-    <th>Rank</th>
+    <th>Score</th>
     <th>Player Name</th>
-    <th>Points</th>
   </thead>
-  <% @leaderboard.each_with_index do |player, n| %>
+  <% @leaderboard.each do |entry| %>
     <tr>
-      <td><%= player[:rank] %></td>
-      <td><%= player[:user].email %></td>
-      <td><%= player[:count] %></td>
+      <td><%= entry.score %></td>
+      <td><%= entry.author.email %></td>
     </tr>
   <% end %>
 </table>
