--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -23,7 +23,6 @@ body {
   bottom: 0;
   width: 100%;
   height: 60px;
-  background-color: #f5f5f5;
 
   p {
     margin: 20px 0
@@ -31,11 +30,22 @@ body {
 }
 
 header.main-header {
+  .navbar-header h2 {
+
+  }
+
   .navbar-brand {
     background: image-url("bug-catcher-logo-black.png") no-repeat;
     width: 202px;
     height: 50px;
+    min-height: 50px;
     display: block;
     text-indent: -99999px;
+  }
+
+  .navbar-nav > li > a {
+    padding: 0;
+    line-height: 50px;
+    padding: 0 10px;
   }
 }
