--- a/app/assets/stylesheets/static_page.scss
+++ b/app/assets/stylesheets/static_page.scss
@@ -90,8 +90,8 @@
 }
 
 .service-description {
-  margin-top: 40px;
-  margin-bottom: 40px;
+  // margin-top: 40px;
+  // margin-bottom: 40px;
 
   @media screen and (min-width: 768px) {
     .row {
